--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "http-status-codes": "^2.1.4",
     "vue": "^2.6.12"
   },
   "devDependencies": {
