--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,30 @@
 asgiref==3.3.1
+attrs==20.3.0
+autopep8==1.5.5
+certifi==2020.12.5
+chardet==4.0.0
+coreapi==2.3.3
+coreschema==0.0.4
 Django==3.1.7
+django-cors-headers==3.7.0
+django-extensions==3.1.1
 django-filter==2.4.0
+django-rest-swagger==2.2.0
 djangorestframework==3.12.2
+idna==2.10
+itypes==1.2.0
+Jinja2==2.11.3
+jsonschema==3.2.0
 Markdown==3.3.3
+MarkupSafe==1.1.1
+openapi-codec==1.3.2
+pycodestyle==2.6.0
+pyrsistent==0.17.3
 pytz==2021.1
+requests==2.25.1
+simplejson==3.17.2
+six==1.15.0
 sqlparse==0.4.1
+toml==0.10.2
+uritemplate==3.0.1
+urllib3==1.26.3
