--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     ports:
       - "8080:8080"
     environment:
-      - VUE_APP_BASE_RISK_TYPE_API_URL=http://0.0.0.0:8000
+      - VUE_APP_BASE_RISK_TYPE_API_URL=http://localhost:8000
 
 volumes:
   node-modules:
